--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.1",
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
